fix: Make the anchor visible for h4 titles

--- a/themes/hugo-docs/assets/typography.scss
+++ b/themes/hugo-docs/assets/typography.scss
@@ -1,11 +1,14 @@
+h1,
 h2,
-h3 {
+h3,
+h4 {
   position: relative;
 }
 
 h1:hover .anchor svg,
 h2:hover .anchor svg,
-h3:hover .anchor svg {
+h3:hover .anchor svg,
+h4:hover .anchor svg {
   visibility: visible;
 }
 
